<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="amountViewModel"
            type="dellhieukieugiservice.duyth10.dellhieukieugi.viewmodel.AmountEntryViewModel" />

        <variable
            name="colorViewModel"
            type="dellhieukieugiservice.duyth10.dellhieukieugi.viewmodel.ColorViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@{colorViewModel.tabLayoutColor}"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="Back"
            android:src="@drawable/baseline_arrow_back"
         />

        <TextView
            android:id="@+id/textAmountEnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Amount Ent"
            android:textSize="24sp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/toolbar1">

        <TextView
            android:id="@+id/tv_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:text="@{amountViewModel.displayText}"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@id/grid_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.795"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:columnCount="3"
            android:rowCount="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_display">

            <Button
                android:id="@+id/btn_1"
                style="@style/DialPadButton"
                android:text="1"
                android:onClick="@{() -> amountViewModel.onNumberButtonClicked(`1`)}" />


            <Button
                android:id="@+id/btn_2"
                style="@style/DialPadButton"
                android:text="2"
                android:onClick="@{() -> amountViewModel.onNumberButtonClicked(`2`)}" />

            <Button
                android:id="@+id/btn_3"
                style="@style/DialPadButton"
                android:text="3"
                android:onClick="@{() -> amountViewModel.onNumberButtonClicked(`3`)}" />

            <Button
                android:id="@+id/btn_4"
                style="@style/DialPadButton"
                android:text="4"
                android:onClick="@{() -> amountViewModel.onNumberButtonClicked(`4`)}" />

            <Button
                android:id="@+id/btn_5"
                style="@style/DialPadButton"
                android:text="5"
                android:onClick="@{() -> amountViewModel.onNumberButtonClicked(`5`)}" />

            <Button
                android:id="@+id/btn_6"
                style="@style/DialPadButton"
                android:text="6"
                android:onClick="@{() -> amountViewModel.onNumberButtonClicked(`6`)}" />

            <Button
                android:id="@+id/btn_7"
                style="@style/DialPadButton"
                android:text="7"
                android:onClick="@{() -> amountViewModel.onNumberButtonClicked(`7`)}" />

            <Button
                android:id="@+id/btn_8"
                style="@style/DialPadButton"
                android:text="8"
                android:onClick="@{() -> amountViewModel.onNumberButtonClicked(`8`)}" />

            <Button
                android:id="@+id/btn_9"
                style="@style/DialPadButton"
                android:text="9"
                android:onClick="@{() -> amountViewModel.onNumberButtonClicked(`9`)}" />

            <Button
                android:id="@+id/btn_delete"
                style="@style/DialPadButton"
                android:text="del"
                android:onClick="@{() -> amountViewModel.onNumberButtonClicked(`del`)}" />

            <Button
                android:id="@+id/btn_0"
                style="@style/DialPadButton"
                android:text="0"
                android:onClick="@{() -> amountViewModel.onNumberButtonClicked(`0`)}" />

            <Button
                android:id="@+id/btn_clean"
                style="@style/DialPadButton"
                android:text="clean"
                android:onClick="@{() -> amountViewModel.onNumberButtonClicked(`clean`)}" />
        </GridLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/darker_gray"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@android:color/holo_orange_light"
            android:text="confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>