<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="dellhieukieugiservice.duyth10.dellhieukieugi.MainActivity">

    <data>
        <variable
            name="colorViewModel"
            type="dellhieukieugiservice.duyth10.dellhieukieugi.viewmodel.ColorViewModel" />
            <variable
            name="homeViewModel"
            type="dellhieukieugiservice.duyth10.dellhieukieugi.viewmodel.HomeViewModel" />

    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:fitsSystemWindows="true">

        <!-- Sử dụng ConstraintLayout thay vì RelativeLayout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <!-- Toolbar -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/lavender"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/custom_menu_icon"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_gravity="start"
                    android:padding="20dp"
                    android:src="@drawable/baseline_hamberger"
                    android:onClick="@{() -> homeViewModel.onMenuIconClicked()}"
                    />

                <TextView
                    android:id="@+id/textHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Home"
                    android:textSize="24sp" />
            </androidx.appcompat.widget.Toolbar>

            <!-- Content Area -->
            <LinearLayout
                android:id="@+id/linearLayout22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <!-- ImageView và TextView sử dụng ViewModel -->
                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:src="@drawable/coin"
                    app:imageResource="@{colorViewModel.imgView}" />

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@{colorViewModel.textView}" />
            </LinearLayout>

            <!-- GridLayout cho các nút -->
            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="3"
                app:layout_constraintTop_toBottomOf="@id/linearLayout22"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <!-- Layout cho imgQR -->
                <LinearLayout
                    android:id="@+id/linearLayoutQR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/gray"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imgQR"
                        style="@style/screenn1"
                        android:src="@drawable/qr" />

                    <TextView
                        android:id="@+id/txtQR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="QR Code"
                        android:textColor="@color/white"
                        android:gravity="center" />
                </LinearLayout>

                <!-- Layout cho imgMoney -->
                <LinearLayout
                    android:id="@+id/linearLayoutMoney"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imgMoney"
                        style="@style/screenn1"
                        android:src="@drawable/money" />

                    <TextView
                        android:id="@+id/txtMoney"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Money"
                        android:textColor="@color/white"
                        android:gravity="center" />
                </LinearLayout>

                <!-- Layout cho imgCredit -->
                <LinearLayout
                    android:id="@+id/linearLayoutCredit"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/gray"
                    android:gravity="center"

                    >

                    <ImageView
                        android:id="@+id/imgCredit"
                        style="@style/screenn1"
                        android:onClick="@{() -> homeViewModel.onCreditCardClicked()}"
                        android:src="@drawable/creditcard"
                        android:visibility="visible"
                        />

                    <TextView
                        android:id="@+id/txtCredit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Credit Card"
                        android:textColor="@color/white"
                        android:gravity="center" />
                </LinearLayout>

                <ImageView style="@style/screenn1" />
                <ImageView style="@style/screenn1" android:src="@color/gray" />
                <ImageView style="@style/screenn1" />
                <ImageView style="@style/screenn1" android:src="@color/gray" />
                <ImageView style="@style/screenn1" />
                <ImageView style="@style/screenn1" android:src="@color/gray" />
            </GridLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            app:menu="@menu/nav_menu"
            app:headerLayout="@layout/nav_header" />

    </androidx.drawerlayout.widget.DrawerLayout>
</layout>
