<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_credit"
            android:icon="@drawable/baseline_credit"
            android:title="credit"/>
        <item
            android:id="@+id/nav_emoney"
            android:icon="@drawable/baseline_money"
            android:title="emoney"/>
        <item
            android:id="@+id/nav_qr"
            android:icon="@drawable/baseline_qr"
            android:title="qr"/>
    </group>
</menu>
